// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TWAMM #cancelLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 40235,
}
`;

exports[`TWAMM #claimEarnings gas 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 33267,
}
`;

exports[`TWAMM #executeTWAMMOrders gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 368581,
}
`;

exports[`TWAMM #submitLongTermOrder gas 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 123228,
}
`;
